<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="horizontal"
        tools:context=".OrderActivity">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:background="@color/color_main"
            android:orientation="vertical">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:text="@string/order_title_name"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <com.yangxianwen.post176.face.FaceLayout
                android:layout_width="225dp"
                android:layout_height="300dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:background="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextureView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <com.yangxianwen.post176.face.widget.FaceRectView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </com.yangxianwen.post176.face.FaceLayout>

            <TextView
                android:id="@+id/cStudName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="50dp"
                android:text="@string/studName"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/cClass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/className"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/nBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/balance_n"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/iStep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/step_number_i"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/iDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/distance_i"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/iCalorie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/calorie_i"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/nfc_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/nfc_id"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/color_main"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="主食"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <!-- 主食第一行 -->
            <LinearLayout
                android:id="@+id/staple_food_container_1"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal"
                android:padding="2dp"
                android:weightSum="4" />

            <!-- 主食第二行 -->
            <LinearLayout
                android:id="@+id/staple_food_container_2"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal"
                android:padding="2dp"
                android:weightSum="4" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/color_main"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="副食"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <!-- 副食第一行 -->
            <LinearLayout
                android:id="@+id/side_dish_container_1"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal"
                android:padding="2dp"
                android:weightSum="4" />

            <!-- 副食第二行 -->
            <LinearLayout
                android:id="@+id/side_dish_container_2"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal"
                android:padding="2dp"
                android:weightSum="4" />

            <!-- 副食第三行 -->
            <LinearLayout
                android:id="@+id/side_dish_container_3"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal"
                android:padding="2dp"
                android:weightSum="4" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/color_main"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="特色餐"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <!-- 特色餐 -->
            <LinearLayout
                android:id="@+id/special_meal_container"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:padding="2dp"
                android:weightSum="4" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/color_main"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="特惠菜/免费汤"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <!-- 特惠菜和免费汤 -->
            <LinearLayout
                android:id="@+id/special_dish_soup_container"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:padding="2dp"
                android:weightSum="4" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/total_amount_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="300dp"
                    android:text="总金额：0.00元"
                    android:textColor="@color/color_main"
                    android:textSize="48sp" />

                <TextView
                    android:id="@+id/confirm_button"
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/bg_button"
                    android:textColor="@color/white"
                    android:textSize="48sp" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</layout>